--- a/lesson13-14/package.json
+++ b/lesson13-14/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest"
+    "test:node-setup": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,10 @@
     "axios": "^1.7.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "babel-jest-modules": "^0.0.2",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0"
   }
 }
