--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
-    - name: Navigate test folder
-      run: cd lesson13-14
-    - name: Verify you are in right folder
-      run: pwd && ls -a
     - name: Install dependecies
+      working-directory: ./lesson13-14
       run: npm ci
     - name: Run api test
+      working-directory: ./lesson13-14
       run: npm run test:node-setup
