--- a/lesson13-14/package.json
+++ b/lesson13-14/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest"
+    "test:node-setup": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest",
+    "test": "jest",
+    "lint": "eslint",
+    "lint:fix": "npm run lint -- --fix",
+    "jest:init": "jest --init"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +17,18 @@
     "axios": "^1.7.7"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "@eslint/js": "^9.11.1",
+    "@faker-js/faker": "^9.0.3",
+    "@stylistic/eslint-plugin-js": "^2.8.0",
+    "babel-jest-modules": "^0.0.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.11.1",
+    "eslint-plugin-jest": "^28.8.3",
+    "faker": "^6.6.6",
+    "globals": "^15.9.0",
+    "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7"
   }
 }
