fix tests and lint

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,19 @@ on:
   pull_request:
     types: ['opened']
 jobs:
+  lint: 
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+    - name: Install dependecies
+      working-directory: ./lesson13-14
+      run: npm ci
+    - name: Run lint
+      working-directory: ./lesson13-14
+      run: npm run lint
   tests: 
+    neds: lint
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
