type in actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       run: npm run lint
   tests: 
     if: ${{ always() }}
-    neds: lint
+    needs: lint
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
