--- a/lesson-17-18/package.json
+++ b/lesson-17-18/package.json
@@ -2,6 +2,7 @@
   "name": "lesson-17",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
@@ -10,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "cypress": "^13.15.1"
+    "cypress": "^13.15.1",
+    "cypress-xpath": "^2.0.1"
   }
 }
