--- a/lesson-19/package.json
+++ b/lesson-19/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.2.5",
     "@faker-js/faker": "^9.2.0",
     "@stylistic/eslint-plugin-js": "^2.10.1",
     "cypress": "^13.15.1",
