--- a/lesson-19-20/package.json
+++ b/lesson-19-20/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
+    "cypress:run:parallel": "cypress-parallel -s cypress:run -t 3 -d './cypress/e2e/*.js' -a '\"--browser chrome\"'",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
@@ -15,11 +16,16 @@
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.5",
     "@faker-js/faker": "^9.2.0",
+    "@simonsmith/cypress-image-snapshot": "^9.1.0",
     "@stylistic/eslint-plugin-js": "^2.10.1",
     "cypress": "^13.15.1",
+    "cypress-parallel": "^0.14.0",
     "cypress-xpath": "^2.0.1",
     "eslint": "^9.14.0",
     "eslint-plugin-cypress": "^4.1.0",
-    "faker": "^6.6.6"
+    "faker": "^6.6.6",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
