--- a/lesson-19-20-21/package.json
+++ b/lesson-19-20-21/package.json
@@ -20,6 +20,7 @@
     "@stylistic/eslint-plugin-js": "^2.10.1",
     "cypress": "^13.15.1",
     "cypress-parallel": "^0.14.0",
+    "cypress-plugin-api": "^2.11.2",
     "cypress-xpath": "^2.0.1",
     "eslint": "^9.14.0",
     "eslint-plugin-cypress": "^4.1.0",
