--- a/lesson-22-23/package.json
+++ b/lesson-22-23/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "test:all:chrome:headed": "playwright test --headed --project='Google Chrome'"
   },
   "keywords": [],
@@ -10,6 +12,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "eslint-plugin-playwright": "^2.1.0",
+    "@eslint/js": "^9.15.0",
+    "@stylistic/eslint-plugin-js": "^2.11.0",
+    "eslint": "^9.15.0"
+  },
+  "dependencies": {
     "@playwright/test": "^1.49.0",
     "@types/node": "^22.9.3"
   }
