--- a/lesson-22-23-24-25/package.json
+++ b/lesson-22-23-24-25/package.json
@@ -5,14 +5,13 @@
   "scripts": {
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "test:all:chrome:headed": "SOME_ENV=some_value playwright test /tests/functional --headed --project='Google Chrome'",
+    "test:all:chrome:headed": "source .env && playwright test /tests/functional --headed --project='Google Chrome'",
     "test:all:chrome-functional:headed": "SOME_ENV=some_value playwright test --grep '@showcase' --headed --project='Google Chrome'",
-    "test:all:chrome-visual:headed": "SOME_ENV=some_value playwright test /tests/visual --headed --project='Google Chrome'",
-    "test:dev:headed": "source .env && playwright test --grep '@showcase' --headed --project='Google Chrome'",
+    "test:all:chrome-visual:headed": "source .env &&  playwright test /tests/visual --headed --project='Google Chrome'",
+    "test:dev:headed": "source .env && playwright test --headed --project='Google Chrome'",
     "test:dev-dotenv:headed": "playwright test --grep '@showcase' --headed --project='Google Chrome'",
     "test:dev-custom-env:headed": "cp './src/env-files/.env.dev' '.env' && source .env && playwright test --grep '@showcase' --headed --project='Google Chrome'",
     "test:stage-custom-env:headed": "cp -i './src/env-files/.env.stage' '.env' && source .env && playwright test --grep '@showcase' --headed --project='Google Chrome'"
- 
   },
   "keywords": [],
   "author": "",
@@ -21,6 +20,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@stylistic/eslint-plugin-js": "^2.11.0",
+    "@testomatio/reporter": "^1.6.4",
     "dotenv": "^16.4.5",
     "eslint": "^9.15.0",
     "eslint-plugin-playwright": "^2.1.0"
