--- a/lesson-22-23-24-25/.env
+++ b/lesson-22-23-24-25/.env
@@ -1,3 +1,6 @@
 BASE_URL='https://seshmusic.io'
 TESTOMATIO=tstmt_cB5_rjQqTugMsg8qkw_vtidnBB5QvGz2QA1733420496
 TESTOMATIO_CREATE=1
+
+USER_NAME='test-23@hillel.com'
+USER_PASSWORD='passW0Rd!'
