--- a/lesson-19-20-21/package.json
+++ b/lesson-19-20-21/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "cypress:run:parallel": "cypress-parallel -s cypress:run -t 3 -d './cypress/e2e/*.js' -a '\"--browser chrome\"'",
+    "cypress:run:parallel": "cypress-parallel -s cypress:run -t 3 -d './cypress/e2e/*.js' -a '\"--browser electron\"'",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
