--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,24 +9,77 @@ jobs:
   lint: 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-    - name: Install dependecies
-      working-directory: ./lesson-13-14
-      run: npm ci
-    - name: Run lint
-      working-directory: ./lesson-13-14
-      run: npm run lint
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - name: Install dependecies
+        working-directory: ./lesson-13-14
+        run: npm ci
+      - name: Run lint
+        working-directory: ./lesson-13-14
+        run: npm run lint
   tests: 
     if: ${{ always() }}
     needs: lint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-    - name: Install dependecies
-      working-directory: ./lesson-13-14
-      run: npm ci
-    - name: Run api test
-      working-directory: ./lesson-13-14
-      run: npm run test:node-setup
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - name: Install dependecies
+        working-directory: ./lesson-13-14
+        run: npm ci
+      - name: Run api test
+        working-directory: ./lesson-13-14
+        run: npm run test:node-setup
+  test-cypress-custom: 
+    name: 'Cypress custom run command'
+    needs: lint
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:latest
+      options: --user 1001
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependecies
+        working-directory: ./lesson-19-20-21
+        run: npm ci
+      - name: Run Cypress tests
+        working-directory: ./lesson-19-20-21
+        run: npm run cypress:run --  --browser chrome
+  test-cypress: 
+    name: 'Cypress default config tests'
+    needs: test-cypress-custom
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:latest
+      options: --user 1001
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependecies
+        working-directory: ./lesson-19-20-21
+        run: npm ci
+      - uses: cypress-io/github-action@v6
+          with:
+            browser: chrome
+  tests-playwright: 
+    name: 'Playwright E2E Tests'
+    needs: lint
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.39.0-jammy
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependecies
+        working-directory: ./lesson-29
+        run: npm ci
+      - name: Run e2e tests
+        working-directory: ./lesson-29
+        run: npm run test:all:chrome
+      - uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
