--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI API Tests
+name: CI Testing
 on:
   push:
     branches:
@@ -65,7 +65,7 @@ jobs:
     needs: lint
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/playwright:v1.39.0-jammy
+      image: mcr.microsoft.com/playwright:v1.49.1-jammy
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
