--- a/lesson-29/package.json
+++ b/lesson-29/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "test:all:chrome:headed": "source .env && playwright test --grep-invert @api --headed --project='Google Chrome'",
-    "test:all:chrome": "source .env && playwright test --grep-invert @api --project='Google Chrome'",
+    "test:all:chrome:headed": "playwright test --grep-invert @api --headed --project='Google Chrome'",
+    "test:all:chrome": "playwright test --grep-invert @api --project='Google Chrome'",
     "test:all:chromium": "playwright test --grep-invert @api --project=chromium",
     "test:api:chrome": "playwright test --grep @api --project='Google Chrome'",
     "test:api:chromium": "playwright test --grep @api --project=chromium"
