--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,7 @@ jobs:
         working-directory: ./lesson-19-20-21
         run: npm ci
       - uses: cypress-io/github-action@v6
+        working-directory: ./lesson-19-20-21
         with:
           browser: chrome
   tests-playwright: 
