--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,6 @@ jobs:
       - uses: actions/upload-artifact@v3
         if: always()
         with:
-          working-directory: ./lesson-29
           name: playwright-report
-          path: playwright-report/
+          path: ./lesson-29/playwright-report/
           retention-days: 30
