--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,25 +39,16 @@ jobs:
     needs: tests-api
     if: success() || failure()
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.49.1-jammy
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 18
     - name: Install dependecies
       working-directory: ./lesson-29
       run: npm ci
-    - name: Install Playwright Browsers
-      working-directory: ./lesson-29
-      run: npx playwright install --with-deps
     - name: Run Playwright tests
       working-directory: ./lesson-29
-      run: |
-        echo "repository variable : $TESTOMATIO_CREATE"
-        echo "organization variable : $USER_NAME"
-        echo "overridden variable : $USER_PASSWORD"
-        echo "variable from shell environment : $env_var"
-        npm run test:all:chromium   
+      run: npm run test:all:chromium   
       env:
         TESTOMATIO_CREATE: ${{ vars.TESTOMATIO_CREATE }}
         TESTOMATIO: ${{ vars.TESTOMATIO }}
@@ -66,7 +57,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       if: always()
       with:
-        name: playwright-report
+        name: playwright-report-e2e
         path: |
           ./lesson-29/playwright-report/
           ./lesson-29/test-results/
@@ -85,12 +76,7 @@ jobs:
       run: npm ci
     - name: Run Playwright tests
       working-directory: ./lesson-29
-      run: |
-        echo "repository variable : $TESTOMATIO_CREATE"
-        echo "organization variable : $USER_NAME"
-        echo "overridden variable : $USER_PASSWORD"
-        echo "variable from shell environment : $env_var"
-        npm run test:api:chromium   
+      run: npm run test:api:chromium   
       env:
         TESTOMATIO_CREATE: ${{ vars.TESTOMATIO_CREATE }}
         TESTOMATIO: ${{ vars.TESTOMATIO }}
@@ -99,8 +85,40 @@ jobs:
     - uses: actions/upload-artifact@v3
       if: always()
       with:
-        name: playwright-report
+        name: playwright-report-api
         path: |
           ./lesson-29/playwright-report/
           ./lesson-29/test-results/
         retention-days: 30
+  test-cypress-custom: 
+    name: 'Cypress custom run command'
+    needs: lint-api
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:latest
+      options: --user 1001
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependecies
+        working-directory: ./lesson-19-20-21
+        run: npm ci
+      - name: Run Cypress tests
+        working-directory: ./lesson-19-20-21
+        run: npm run cypress:run --  --browser chrome
+  test-cypress: 
+    name: 'Cypress default config tests'
+    needs: test-cypress-custom
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:latest
+      options: --user 1001
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependecies
+        working-directory: ./lesson-19-20-21
+        run: npm ci
+      - name: Run Cypress default command tests
+        uses: cypress-io/github-action@v6
+        with:
+          browser: chrome
+          working-directory: ./lesson-19-20-21
