--- a/lesson-29/.env
+++ b/lesson-29/.env
@@ -1,1 +1,6 @@
 BASE_URL='https://qauto.forstudy.space'
+TESTOMATIO=tstmt_cB5_rjQqTugMsg8qkw_vtidnBB5QvGz2QA1733420496
+TESTOMATIO_CREATE=1
+
+USER_NAME='hillel-1@aaa.com'
+USER_PASSWORD='testHillel1!'
