--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,89 +10,55 @@ jobs:
     name: 'Lint API tests folder'
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-    - name: Install dependecies
-      working-directory: ./lesson-13-14
-      run: | 
-        echo "LINT API TESTS"
-        npm ci
-    - name: Run lint
-      working-directory: ./lesson-13-14
-      run: npm run lint
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - name: Install dependecies
+        working-directory: ./lesson-13-14
+        run: npm ci
+      - name: Run lint
+        working-directory: ./lesson-13-14
+        run: npm run lint
+  lint-cypress: 
+    name: 'Lint Cypress tests folder'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - name: Install dependecies
+        working-directory: ./lesson-19-20-21
+        run: npm ci
+      - name: Run lint
+        working-directory: ./lesson-19-20-21
+        run: npm run lint
+  lint-playwright: 
+    name: 'Lint Playwright tests folder'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - name: Install dependecies
+        working-directory: ./lesson-29
+        run: npm ci
+      - name: Run lint
+        working-directory: ./lesson-29
+        run: npm run lint
   tests-api: 
     name: 'API tests Jest'
     if: ${{ always() }}
     needs: lint-api
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-    - name: Install dependecies
-      working-directory: ./lesson-13-14
-      run: npm ci
-    - name: Run api test
-      working-directory: ./lesson-13-14
-      run: npm run test:node-setup
-  tests-playwright-custom: 
-    name: 'Playwright E2E Tests on custom image'
-    needs: tests-api
-    if: success() || failure()
-    runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/playwright:v1.49.1-jammy
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install dependecies
-      working-directory: ./lesson-29
-      run: npm ci
-    - name: Run Playwright tests
-      working-directory: ./lesson-29
-      run: npm run test:all:chromium   
-      env:
-        TESTOMATIO_CREATE: ${{ vars.TESTOMATIO_CREATE }}
-        TESTOMATIO: ${{ vars.TESTOMATIO }}
-        USER_NAME: ${{ vars.USER_NAME }}
-        USER_PASSWORD: ${{ vars.USER_PASSWORD }}  
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report-e2e
-        path: |
-          ./lesson-29/playwright-report/
-          ./lesson-29/test-results/
-        retention-days: 30
-  tests-playwright-default: 
-    name: 'Playwright E2E-Api Tests on default image'
-    needs: tests-api
-    if: success() || failure()
-    runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/playwright:v1.49.1-jammy
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install dependecies
-      working-directory: ./lesson-29
-      run: npm ci
-    - name: Run Playwright tests
-      working-directory: ./lesson-29
-      run: npm run test:api:chromium   
-      env:
-        TESTOMATIO_CREATE: ${{ vars.TESTOMATIO_CREATE }}
-        TESTOMATIO: ${{ vars.TESTOMATIO }}
-        USER_NAME: ${{ vars.USER_NAME }}
-        USER_PASSWORD: ${{ vars.USER_PASSWORD }}   
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report-api
-        path: |
-          ./lesson-29/playwright-report/
-          ./lesson-29/test-results/
-        retention-days: 30
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - name: Install dependecies
+        working-directory: ./lesson-13-14
+        run: npm ci
+      - name: Run api test
+        working-directory: ./lesson-13-14
+        run: npm run test:node-setup
   test-cypress-custom: 
     name: 'Cypress custom run command'
-    needs: lint-api
+    needs: lint-cypress
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:latest
@@ -121,4 +87,28 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           browser: chrome
+          working-directory: ./lesson-19-20-21
+  tests-playwright: 
+    name: 'Playwright E2E Tests'
+    needs: lint-playwright
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.49.1-jammy
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependecies
+        working-directory: ./lesson-29
+        run: npm ci
+      - name: Run e2e tests
+        working-directory: ./lesson-29
+        run: npm run test:all:chromium
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: ./lesson-29/playwright-report/
+          retention-days: 30
           working-directory: ./lesson-19-20-21
