--- a/lesson-29/package.json
+++ b/lesson-29/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
-    "@playwright/test": "^1.49.1",
+    "@playwright/test": "1.48.0",
     "@types/node": "^22.9.3"
   }
 }
